--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: socratadata
-Title: What the Package Does (One Line, Title Case)
+Title: Explore Socrata Data with Ease
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Ryan", "Zomorrodi", , "rzomor2@uic.edu", role = c("aut", "cre"))
+Description: Provides a modern interface for downloading data from 'Socrata' open data portals powered by Rust. Introduces support for all 'Socrata' datatypes, and as such, natively supports datasets with geospatial fields by returning them as 'sf' objects when applicable.
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -22,3 +21,4 @@ Suggests:
     httptest2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://ryanzomorrodi.github.io/socratadata/
