--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,10 +15,15 @@ Depends:
 Imports: 
     cli,
     httr2,
+    rlang (>= 1.1.0),
     sf,
     tibble
 Suggests: 
+    glue,
     httptest2,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://ryanzomorrodi.github.io/socratadata/
+VignetteBuilder: knitr
