Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,6 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
-URL: https://ryanzomorrodi.github.io/socratadata/
+URL: https://ryanzomorrodi.github.io/socratadata/, https://github.com/ryanzomorrodi/socratadata
 VignetteBuilder: knitr
+BugReports: https://github.com/ryanzomorrodi/socratadata/issues
