--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: socratadata
 Title: Explore Socrata Data with Ease
-Version: 0.1.0
+Version: 0.0.0.9006
 Authors@R: 
     person("Ryan", "Zomorrodi", , "rzomor2@uic.edu", role = c("aut", "cre"))
-Description: Provides an easy-to-use interface for downloading data from 'Socrata' open data portals powered by Rust. Introduces support for the 'Socrata Discovery API' and all 'Socrata' data types.
+Description: Provides an interface to search, read, query, and retrieve metadata for 
+    datasets hosted on 'Socrata' open data portals. Supports all Socrata data types, 
+    including spatial data returned as 'sf' objects.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
