--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,8 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Config/rextendr/version: 0.4.1
-SystemRequirements: Cargo (Rust's package manager), rustc >= 1.65.0
+Config/rextendr/version: 0.4.2
+SystemRequirements: Cargo (Rust's package manager), rustc >= 1.65.0, xz
 Depends: 
     R (>= 4.2)
 Imports: 
