--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -10,8 +10,12 @@ crate-type = [ 'staticlib' ]
 name = 'socratadata'
 
 [dependencies]
-extendr-api = '*'
+extendr-api = '0.8.1'
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.6"
+
+[profile.release]
+lto = true
+codegen-units = 1
